--- a/white-oats/slides_example.tex
+++ b/white-oats/slides_example.tex
@@ -12,7 +12,7 @@
 % option: When called with the "oatslogo" option, it will use the OATS logo.
 
 % we want serif math fonts, they look better
-\documentclass[pdf, mathserif]{beamer}
+\documentclass[pdf, mathserif, aspectratio=169]{beamer}
 
 % load required packages. I prefer IEEEtran for equations, but that's a
 % personal preference.
@@ -32,7 +32,7 @@
 \graphicspath{{./graphics/}}
 
 % tell beamer to use the purdue-gold theme
-\usetheme[oatslogo]{purduewhiteoats}
+\usetheme[sponsorlogo]{purduewhiteoats}
 
 % set title and author
 \title{beamer-purdue-oats}
