--- a/white-oats/beamerthemepurduewhiteoats.sty
+++ b/white-oats/beamerthemepurduewhiteoats.sty
@@ -15,6 +15,7 @@
 %
 % TODO:
 %  - add section page
+%  - add framesubtitle
 
 % options ---------------------------------------------------------------------
 
@@ -142,6 +143,22 @@
 \setbeamercolor{block title}{fg=White, bg=CoalGray}
 \setbeamercolor{block body}{fg=Black, bg=titleLine}
 
+% misc ------------------------------------------------------------------------
+\newenvironment<>{varblock}[2][0.9\textwidth]{%
+  \setlength{\textwidth}{#1}%
+  \setlength{\linewidth}{\textwidth}% required to itemize respect the width of block
+  \begin{center}
+    \begin{minipage}{#1}
+      \begin{actionenv}#3%
+        \def\insertblocktitle{#2}%
+        \par%
+        \usebeamertemplate{block begin}}
+      {\par%
+        \usebeamertemplate{block end}%
+      \end{actionenv}
+    \end{minipage}
+  \end{center}
+}
 
 % math proof color ------------------------------------------------------------
 \setbeamertemplate{qed symbol}{\color{Black} $\blacksquare$}
